<resources>
    <string name="app_name">androidProject_jamesChrisKris</string>
    <string name="main_learn">I want to learn:</string>
    <string name="main_languageFiller">Language</string>
    <string name="quizButton_main">Quizzes</string>
    <string name="lessonButton_main">Lessons</string>
    <string name="language_language">Language</string>
    <string name="language_quiz">QUIZZES</string>
    <string name="language_lesson">LESSONS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lessons_hiraganaChart">Hiragana Chart</string>
    <string name="lessons_katakanaChart">Katakana Chart</string>
    <string name="lessons_about">About</string>
    <string name="lessons_lesson1">Lesson1</string>
    <string name="lessons_lesson2">Lesson2</string>
    <string name="lessons_lesson3">Lesson3</string>
    <string name="lessons_lesson4">Lesson4</string>
    <string name="lessons_lesson5">Lesson5</string>
    <string name="lessons_lesson6">Lesson6</string>
    <string name="hiragana_basicSyllables">Hiragana Basic Syllables</string>
    <string name="hiragana_diacriticalMarks">Hiragana with Diacritical Marks</string>
    <string name="hiragana_contractedSounds">Hiragana Contracted Sounds</string>
    <string name="katakana_basicSyllables">Katakana Basic Syllables</string>
    <string name="katakana_diacriticalMarks">Katakana with Diacritical Marks</string>
    <string name="katakana_contractedSounds">Katakana Contracted Sounds</string>
    <string name="about_title">About</string>
    <string name="about_appDescription">cwu213@my.bcit.ca\n\kocampo@my.bcit.ca\n\jlum43@my.bcit.ca\n\n\n\GENKI: An Integrated Course in Elementary Japanese is a textbook for beginners in the study of the Japanese language. Students can complete the elementary-level study of Japanese in the 23 lessons of this text, which is divided into two volumes. The book is designed mainly for use in university courses, but is also effective for high school students and adults who are beginning to learn Japanese either at school or on their own. Hopefully, students will have at least a basic knowledge of English, because grammar explanations are given in English. GENKI: An Integrated Course in Elementary Japanese is a comprehensive approach to developing the four basic language skills (listening, speaking, reading, and writing), which aims to cultivate overall Japanese-language ability. Emphasis has been placed on balancing accuracy, fluency, and complexity so that students using the material will not end up speaking accurately yet in a stilted manner, or fluently but employing only simple grammatical structures.</string>
    <string name="title_activity_lessons_button_menu">LessonsButtonMenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textViewLessonHeader" />
    <string name="placeholder_text_one" />
    <string name="button_placeholderText_alphabet_one">placeholder_text_one</string>
    <string name="button_placeholderText_alphabet_two">placeholder_text_two</string>
    <string name="button_placeholderText_alphabet_three">placeholder_text_three</string>
    <string name="button_placeholderText_alphabet_four">placeholder_text_four</string>
    <string name="textView_main">"Alphabet Lessons "</string>
    <string name="hiraganaButton_main">hiragana</string>
    <string name="katakanaButton_main">katakana</string>
    <string name="textView_header_fragment_alphabet">" "</string>
    <string name="header_fragment_alphabet" />
    <string name="subheader_fragment_alphabet" />
    <string name="imageView_fragment_alphabet">image</string>
    <string name="textView_quiz_complete">Score</string>


    <string name="button_placeholderText_alphabet_five">placeholder_text_five</string>
    <string name="button_placeholderText_alphabet_six">placeholder_text_six</string>
    <string name="button_placeholderText_alphabet_seven">placeholder_text_seven</string>
    <string name="button_placeholderText_alphabet_eight">placeholder_text_eight</string>
    <string name="button_placeholderText_alphabet_nine">placeholder_text_nine</string>
    <string name="button_placeholderText_alphabet_ten">placeholder_text_ten</string>
    <string name="button_placeholderText_alphabet_eleven">placeholder_text_eleven</string>
    <string name="button_placeholderText_alphabet_twelve">placeholder_text_twelve</string>
    <string name="button_placeholderText_alphabet_thirteen">placeholder_text_thirteen</string>
    <string name="button_placeholderText_alphabet_fourteen">placeholder_text_fourteen</string>
    <string name="button_placeholderText_alphabet_fifteen">placeholder_text_fifteen</string>
    <string name="button_placeholderText_alphabet_sixteen">placeholder_text_sixteen</string>
    <string name="button_placeholderText_alphabet_seventeen">placeholder_text_seventeen</string>
    <string name="button_placeholderText_alphabet_eighteen">placeholder_text_eighteen</string>
    <string name="button_placeholderText_alphabet_nineteen">placeholder_text_nineteen</string>
    <string name="button_placeholderText_alphabet_twenty">placeholder_text_twenty</string>
    <string name="button_placeholderText_alphabet_twentyone">placeholder_text_twentyone</string>
    <string name="button_placeholderText_alphabet_twentytwo">placeholder_text_twentytwo</string>
    <string name="button_placeholderText_alphabet_twentythree">placeholder_text_twentythree</string>
    <string name="button_placeholderText_alphabet_twentyfour">placeholder_text_twentyfour</string>
    <string name="button_placeholderText_alphabet_twentyfive">placeholder_text_twentyfive</string>
    <string name="button_placeholderText_alphabet_twentysix">placeholder_text_twentysix</string>
    <string name="button_placeholderText_alphabet_twentyseven">placeholder_text_twentyseven</string>
    <string name="button_placeholderText_alphabet_twentyeight">placeholder_text_twentyeight</string>
    <string name="button_placeholderText_alphabet_twentynine">placeholder_text_twentynine</string>
    <string name="button_placeholderText_alphabet_thirty">placeholder_text_thirty</string>
    <string name="button_placeholderText_alphabet_thirtyone">placeholder_text_thirtyone</string>
    <string name="button_placeholderText_alphabet_thirtytwo">placeholder_text_thirtytwo</string>
    <string name="button_placeholderText_alphabet_thirtythree">placeholder_text_thirtythree</string>
    <string name="button_placeholderText_alphabet_thirtyfour">placeholder_text_thirtyfour</string>
    <string name="button_placeholderText_alphabet_thirtyfive">placeholder_text_thirtyfive</string>
    <string name="button_placeholderText_alphabet_thirtysix">placeholder_text_thirtysix</string>
    <string name="button_placeholderText_alphabet_thirtyseven">placeholder_text_thirtyseven</string>
    <string name="button_placeholderText_alphabet_thirtyeight">placeholder_text_thirtyeight</string>
    <string name="button_placeholderText_alphabet_thirtynine">placeholder_text_thirtynine</string>
    <string name="button_placeholderText_alphabet_forty">placeholder_text_forty</string>
    <string name="button_placeholderText_alphabet_fortyfirst">placeholder_text_fortyfirst</string>
    <string name="button_placeholderText_alphabet_fortytwo">placeholder_text_fortytwo</string>
    <string name="button_placeholderText_alphabet_fortythree">placeholder_text_fortythree</string>
    <string name="button_placeholderText_alphabet_fortyfour">placeholder_text_fortyfour</string>
    <string name="button_placeholderText_alphabet_fortyfive">placeholder_text_fortyfive</string>
    <string name="button_placeholderText_alphabet_fortysixth">placeholder_text_fortysixth</string>
    <string name="button_placeholderText_alphabet_fortyseven">placeholder_text_fortyseven</string>
    <string name="main_login">Login</string>
    <string name="main_createNewAccount">Create a new account</string>
    <string name="main_emailHint">Email</string>
    <string name="main_passwordHint">Password</string>
    <string name="signup_confirmPassword">Confirm Password</string>
    <string name="signup_createAccount">Create account</string>
    <string name="signup_login">Login</string>
    <string name="signup_haveAccount">Already have an account?</string>
    <string name="login_message_correct">Correct</string>
    <string name="login_message_wrong">Wrong Login!</string>
    <string name="signup_message_taken">Login Taken!</string>
    <string name="signup_message_success">Signing up!</string>
    <string name="signup_message_wrongPass">Passwords must match</string>
    <string name="quiz_percentage">%s%%</string>


</resources>