<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView_logo_signup"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/genki_login_screen_logo" />

    <Space
        android:id="@+id/space_between_logo_and_signuptext"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView_signup_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/editText_signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/main_emailHint"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editText_signup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/main_passwordHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:password="true" />

    <EditText
        android:id="@+id/editText_signup_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/signup_confirmPassword"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:password="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView_signup_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E91E63" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <Button
        android:id="@+id/button_signup_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_createAccount"
        android:textColor="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <Button
        android:id="@+id/button_signup_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_login"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_haveAccount"
        android:textSize="16sp" />
</LinearLayout>