<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/space"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

  <ImageView
      android:id="@+id/imageView_genki_logo_login_page"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      app:srcCompat="@drawable/genki_login_screen_logo" />

  <Space
      android:id="@+id/space_between_logo_and_header"
      android:layout_width="match_parent"
      android:layout_height="20dp" />

  <TextView
      android:id="@+id/textView_signup_signup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/main_login"
      android:textSize="48sp" />

  <Space
      android:id="@+id/space_between_logintext_and_emailtext"
      android:layout_width="match_parent"
      android:layout_height="10dp" />

  <EditText
      android:id="@+id/editText_login_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="12"
      android:hint="@string/main_emailHint"
      android:inputType="textPersonName"
      android:minHeight="48dp" />

  <EditText
      android:id="@+id/editText_login_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="12"
      android:hint="@string/main_passwordHint"
      android:inputType="textPersonName"
      android:minHeight="48dp"
      android:password="true" />

  <Space
      android:layout_width="match_parent"
      android:layout_height="25dp" />

  <TextView
      android:id="@+id/textView_login_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="#E91E63" />

  <Space
      android:layout_width="match_parent"
      android:layout_height="25dp" />

  <Button
      android:id="@+id/button_login_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_login"
      android:textColor="#000000" />

  <Space
      android:layout_width="match_parent"
      android:layout_height="25dp" />

  <Button
      android:id="@+id/button_login_signup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_createNewAccount"
      android:textColor="#000000" />
</LinearLayout>