<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_fragment_alphabet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="50dp"
    android:layout_marginRight="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CharacterActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView_header_fragment_alphabet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autoSizeTextType="none"
        android:gravity="center_horizontal"
        android:text="@string/header_fragment_alphabet"
        android:textSize="34sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView_subheader_fragment_alphabet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/subheader_fragment_alphabet"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/imageView_fragment_alphabet"
        android:layout_width="222dp"
        android:layout_height="185dp"
        android:layout_weight="1"
        android:contentDescription="@string/imageView_fragment_alphabet"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

</LinearLayout>